try to fix widget on mobile

--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -587,10 +587,6 @@ video {
   position: relative;
 }
 
-.inset-0 {
-  inset: 0px;
-}
-
 .bottom-0 {
   bottom: 0px;
 }
